# FightTranslator

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cpp
examples/: Factorial.fight  Quadratic.fight  Simple.fight  TokenTable.conf
include/: FightCodeGen.h  FightLexer.h  FightParser.h  Lexem.h  SymbolTable.h
src/: FightParser.cpp
